[gd_scene load_steps=4 format=3 uid="uid://2gv3qb8l4xt0"]

[ext_resource type="Script" uid="uid://cagtqt5rbvcr5" path="res://Scenes/GameUi/GameUi.gd" id="1_mb7aw"]
[ext_resource type="LabelSettings" uid="uid://rxh1b0yjcvqa" path="res://Resources/TitleLabel.tres" id="2_anb74"]
[ext_resource type="LabelSettings" uid="uid://cg7qig2uq4s3y" path="res://Resources/NormalLabel.tres" id="4_tt7lr"]

[node name="GameUi" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mb7aw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24

[node name="ScoreLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "000000"

[node name="GameOver" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2509804, 0.05882353, 0.5058824, 0.69411767)

[node name="VB" type="VBoxContainer" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -234.5
offset_top = -31.0
offset_right = 234.5
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="GameOver/VB"]
layout_mode = 2
text = "Game Over Rover"
label_settings = ExtResource("2_anb74")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverScored" type="Label" parent="GameOver/VB"]
layout_mode = 2
text = "You Scored xxxxxx"
label_settings = ExtResource("4_tt7lr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="GameOver/VB"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="PressShoot" type="Label" parent="GameOver/VB"]
layout_mode = 2
text = "Press Shoot"
label_settings = ExtResource("4_tt7lr")
horizontal_alignment = 1
vertical_alignment = 1
